# ot-harjoitustyo

./: .coverage  .gitignore  .pylintrc  README.md  history.db  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md  vaatimuusmaarittely.md
htmlcov/: _Users_nikopaasiniemi_Library_Caches_pypoetry_virtualenvs_ot-harjoitustyo-bNJlX_Rg-py3_9_lib_python3_9_site-packages__pytest___init___py.html  _Users_nikopaasiniemi_Library_Caches_pypoetry_virtualenvs_ot-harjoitustyo-bNJlX_Rg-py3_9_lib_python3_9_site-packages__pytest__argcomplete_py.html  _Users_nikopaasiniemi_Library_Caches_pypoetry_virtualenvs_ot-harjoitustyo-bNJlX_Rg-py3_9_lib_python3_9_site-packages__pytest__code___init___py.html  _Users_nikopaasiniemi_Library_Caches_pypoetry_virtualenvs_ot-harjoitustyo-bNJlX_Rg-py3_9_lib_python3_9_site-packages__pytest__code_code_py.html  _Users_nikopaasiniemi_Library_Caches_pypoetry_virtualenvs_ot-harjoitustyo-bNJlX_Rg-py3_9_lib_python3_9_site-packages__pytest__code_source_py.html  _Users_nikopaasiniemi_Library_Caches_pypoetry_virtualenvs_ot-harjoitustyo-bNJlX_Rg-py3_9_lib_python3_9_site-packages__pytest__io___init___py.html  _Users_nikopaasiniemi_Library_Caches_pypoetry_virtualenvs_ot-harjoitustyo-bNJlX_Rg-py3_9_lib_python3_9_site-packages__pytest__io_saferepr_py.html  (+95 more)
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
src/: calculator.py  errors.py  history.db  history.py  operation.py  parse.py  pyproject.toml
src/tests/: calculator_test.py
(+3 files in other folders)
