[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Niko Paasiniemi <niko.paasiniemi@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.5.0"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
